home and unipage

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"http://noelalam9999.github.io/contactsint.com",
+  "homepage":"https://noelalam9999.github.io/contactsint.com",
   "name": "open-react-template",
   "version": "0.1.0",
   "private": true,
