--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"https://noelalam9999.github.io/contactsint.com",
+  "homepage": "https://www.mistri-online.com/",
   "name": "open-react-template",
   "version": "0.1.0",
   "private": true,
@@ -9,22 +9,24 @@
     "lodash": "^4.17.21",
     "node-sass": "^4.14.1",
     "react": "^16.14.0",
+    "react-bootstrap": "^1.5.1",
     "react-dom": "^16.14.0",
     "react-ga": "^2.7.0",
+    "react-hero-carousel": "^1.0.3",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.4",
+    "reactstrap": "^8.9.0",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "reset-css": "^5.0.1",
+    "styled-components": "^5.2.1"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/cruip/open-react-template.git"
   },
   "scripts": {
-   
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
